# l2_middleware

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  game_server_files_plan.md  game_server_plan.md  vcpkg-configuration.json  vcpkg.json
.cursor/rules/: cpp.mdc  project.mdc  slow-think.mdc
docs/: 746-interlude-update3-opcodes.md  network-steps.md  ref-class-names.md  tcp_server_explained.md  xor_bug_fix.md
docs/superpowers/plans/: 2026-05-22-player-movement.md
docs/superpowers/specs/: 2026-05-22-player-movement-design.md
src/: auth_gg_response.cpp  auth_gg_response.hpp  auth_login_packet.cpp  auth_login_packet.hpp  blowfish_openssl.cpp  blowfish_openssl.hpp  client_connection.cpp  client_connection.hpp  connection_manager.cpp  connection_manager.hpp  game_client_encryption.cpp  init_packet.cpp  init_packet.hpp  l2_checksum.cpp  login_encryption.hpp  login_ok_response.cpp  login_ok_response.hpp  login_server.cpp  login_server.hpp  main.cpp  packet.cpp  packet.hpp  packet_buffer.cpp  packet_buffer.hpp  packet_factory.cpp  packet_factory.hpp  packet_tests.cpp  request_auth_gg.hpp  rsa_manager.cpp  rsa_manager.hpp  session_key.hpp
src/core/encryption/: blowfish_openssl.cpp  blowfish_openssl.hpp  game_client_encryption.cpp  game_client_encryption.hpp  l2_checksum.cpp  l2_checksum.hpp  login_encryption.cpp  login_encryption.hpp  rsa_manager.cpp  rsa_manager.hpp
src/core/network/: base_client_connection.cpp  base_client_connection.hpp  base_connection_manager.cpp  base_connection_manager.hpp  client_connection.cpp  client_connection.hpp  connection_manager.cpp  connection_manager.hpp  packet_buffer.cpp  packet_buffer.hpp
src/core/packets/: packet.cpp  packet.hpp
src/core/tests/: all_core_tests.cpp
src/core/tests/encryption/: blowfish_test.cpp  game_client_encryption_test.cpp  l2_checksum_test.cpp  login_encryption_test.cpp  rsa_manager_test.cpp
src/core/tests/network/: packet_buffer_test.cpp
src/core/tests/packets/: packet_test.cpp
src/core/tests/utils/: session_key_test.cpp
src/core/utils/: session_key.cpp  session_key.hpp
src/game/: .keep  main.cpp
src/game/entities/: creature.cpp  creature.hpp  player.cpp  player.hpp  world_object.cpp  world_object.hpp
src/game/network/: game_client_connection.cpp  game_client_connection.hpp  game_connection_manager.cpp  game_connection_manager.hpp
src/game/packets/: packet_factory.cpp  packet_factory.hpp
src/game/packets/requests/: auth_login_packet.cpp  auth_login_packet.hpp  create_char_request_packet.cpp  create_char_request_packet.hpp  delete_char_packet.cpp  delete_char_packet.hpp  enter_world_packet.cpp  enter_world_packet.hpp  logout_packet.cpp  logout_packet.hpp  move_backward_to_location_packet.cpp  move_backward_to_location_packet.hpp  new_char_request_packet.cpp  new_char_request_packet.hpp  no_op_packet.cpp  no_op_packet.hpp  protocol_version_packet.cpp  protocol_version_packet.hpp  request_answer_join_pledge.cpp  request_answer_join_pledge.hpp  request_delete_character_packet.cpp  request_delete_character_packet.hpp  request_game_start.cpp  request_game_start.hpp  request_item_list.cpp  request_item_list.hpp  request_show_mini_map.cpp  request_show_mini_map.hpp  request_skill_cool_time.cpp  request_skill_cool_time.hpp  request_user_ban_info_packet.hpp  restore_char_packet.cpp  restore_char_packet.hpp  select_char_packet.cpp  select_char_packet.hpp  send_client_ini_packet.cpp  send_client_ini_packet.hpp  validate_position_packet.cpp  validate_position_packet.hpp
src/game/packets/requests/extended/: check_char_name_packet.cpp  check_char_name_packet.hpp  go_lobby_packet.cpp  go_lobby_packet.hpp  request_manor_list.cpp  request_manor_list.hpp  request_user_ban_info_packet.cpp  request_user_ban_info_packet.hpp  send_client_ini_packet.hpp
src/game/packets/responses/: abnormal_status_update.cpp  abnormal_status_update.hpp  action_failed.cpp  action_failed.hpp  ask_join_pledge.cpp  ask_join_pledge.hpp  char_info.cpp  char_info.hpp  character_create_success.cpp  character_create_success.hpp  character_selected.cpp  character_selected.hpp  character_selection_info.cpp  character_selection_info.hpp  creature_say.cpp  creature_say.hpp  etc_status_update.cpp  etc_status_update.hpp  ex_send_manor_list.cpp  ex_send_manor_list.hpp  ex_set_compass_zone_code.cpp  ex_set_compass_zone_code.hpp  ex_show_screen_message.cpp  ex_show_screen_message.hpp  ex_storage_max_count.cpp  ex_storage_max_count.hpp  friend_list.cpp  friend_list.hpp  henna_info.cpp  henna_info.hpp  item_list.cpp  item_list.hpp  move_to_location.cpp  move_to_location.hpp  new_character_success.cpp  new_character_success.hpp  npc_html_message.cpp  npc_html_message.hpp  npc_info.cpp  npc_info.hpp  (+30 more)
src/game/server/: character_database_manager.cpp  character_database_manager.hpp  game_server.cpp  game_server.hpp
src/login/: main.cpp
src/login/data/: server_data.cpp  server_data.hpp
src/login/network/: login_client_connection.cpp  login_client_connection.hpp  login_connection_manager.cpp  login_connection_manager.hpp
src/login/packets/: packet_factory.cpp  packet_factory.hpp
src/login/packets/requests/: auth_login_packet.cpp  auth_login_packet.hpp  request_auth_gg.cpp  request_auth_gg.hpp  request_gs_login.cpp  request_gs_login.hpp  request_server_list.cpp  request_server_list.hpp
src/login/packets/responses/: auth_gg_response.cpp  auth_gg_response.hpp  init_packet.cpp  init_packet.hpp  login_ok_response.cpp  login_ok_response.hpp  play_ok_response.cpp  play_ok_response.hpp  server_list_response.cpp  server_list_response.hpp
src/login/server/: game_server_manager.cpp  game_server_manager.hpp  login_server.cpp  login_server.hpp
src/login/tests/: all_login_tests.cpp  packet_factory_test.cpp  packet_tests.cpp
src/login/tests/requests/: auth_login_packet_test.cpp  request_auth_gg_test.cpp
src/login/tests/responses/: auth_gg_response_test.cpp  init_packet_test.cpp  login_ok_response_test.cpp
test_data/: test_private_key.pem
